@@ -144,7 +144,7 @@ CREATE TABLE ART_DATABASES
 	DATABASE_PROTOCOL VARCHAR(50),
 	DRIVER VARCHAR(200),
 	URL VARCHAR(2000),
-	USERNAME VARCHAR(50),
+	USERNAME VARCHAR(100),
 	PASSWORD VARCHAR(200),
 	PASSWORD_ALGORITHM VARCHAR(20),
 	POOL_TIMEOUT INTEGER,  
