@@ -4,6 +4,11 @@
 -- update database version
 -- add schedule_id column for pipeline
 -- add quartz calendar names column for pipeline
+-- increase size of username column in datasources
+
+-- NOTES:
+-- for hsqldb, sql server, replace the MODIFY keyword with ALTER COLUMN
+-- for postgresql, replace the MODIFY keyword with ALTER COLUMN <column name> TYPE <data type>
 
 -- ------------------------------------------------
 
@@ -16,3 +21,6 @@ ALTER TABLE ART_PIPELINES ADD SCHEDULE_ID INTEGER;
 
 -- add quartz calendar names column for pipeline
 ALTER TABLE ART_PIPELINES ADD QUARTZ_CALENDAR_NAMES VARCHAR(100);
+
+-- increase size of username column in datasources
+ALTER TABLE ART_DATABASES MODIFY USERNAME VARCHAR(100);
