@@ -47,7 +47,7 @@ CREATE MEMORY TABLE PUBLIC.ART_QUERY_RULES(QUERY_ID INTEGER NOT NULL,RULE_NAME V
 CREATE MEMORY TABLE PUBLIC.ART_USER_RULES(USERNAME VARCHAR(50) NOT NULL,RULE_NAME VARCHAR(50) NOT NULL,RULE_VALUE VARCHAR(100),RULE_TYPE VARCHAR(6),USER_ID INTEGER,RULE_ID INTEGER,RULE_VALUE_KEY VARCHAR(50))
 CREATE INDEX USER_RULES_INDX ON PUBLIC.ART_USER_RULES(USERNAME,RULE_NAME)
 CREATE MEMORY TABLE PUBLIC.ART_RULES(RULE_NAME VARCHAR(50) NOT NULL PRIMARY KEY,TYPE VARCHAR(6),CREATION_DATE TIMESTAMP,UPDATE_DATE TIMESTAMP,CREATED_BY VARCHAR(50),UPDATED_BY VARCHAR(50),RULE_ID INTEGER,DATA_TYPE VARCHAR(30),DESCRIPTION VARCHAR(200))
-CREATE MEMORY TABLE PUBLIC.ART_DATABASES(DATABASE_ID INTEGER NOT NULL PRIMARY KEY,NAME VARCHAR(50) NOT NULL,UPDATE_DATE TIMESTAMP,POOL_TIMEOUT INTEGER,TEST_SQL VARCHAR(60),ACTIVE INTEGER,DESCRIPTION VARCHAR(200),CREATION_DATE TIMESTAMP,CREATED_BY VARCHAR(50),UPDATED_BY VARCHAR(50),JNDI INTEGER,PASSWORD_ALGORITHM VARCHAR(20),DATASOURCE_TYPE VARCHAR(20),DRIVER VARCHAR(200),URL VARCHAR(2000),USERNAME VARCHAR(50),PASSWORD VARCHAR(200),DATASOURCE_OPTIONS VARCHAR(16777216),DATABASE_PROTOCOL VARCHAR(50),DATABASE_TYPE VARCHAR(100))
+CREATE MEMORY TABLE PUBLIC.ART_DATABASES(DATABASE_ID INTEGER NOT NULL PRIMARY KEY,NAME VARCHAR(50) NOT NULL,UPDATE_DATE TIMESTAMP,POOL_TIMEOUT INTEGER,TEST_SQL VARCHAR(60),ACTIVE INTEGER,DESCRIPTION VARCHAR(200),CREATION_DATE TIMESTAMP,CREATED_BY VARCHAR(50),UPDATED_BY VARCHAR(50),JNDI INTEGER,PASSWORD_ALGORITHM VARCHAR(20),DATASOURCE_TYPE VARCHAR(20),DRIVER VARCHAR(200),URL VARCHAR(2000),USERNAME VARCHAR(100),PASSWORD VARCHAR(200),DATASOURCE_OPTIONS VARCHAR(16777216),DATABASE_PROTOCOL VARCHAR(50),DATABASE_TYPE VARCHAR(100))
 CREATE MEMORY TABLE PUBLIC.ART_JOBS(JOB_ID INTEGER NOT NULL PRIMARY KEY,QUERY_ID INTEGER NOT NULL,USERNAME VARCHAR(50) NOT NULL,OUTPUT_FORMAT VARCHAR(50) NOT NULL,MAIL_TOS VARCHAR(254),MAIL_FROM VARCHAR(80),SUBJECT VARCHAR(1000),MESSAGE VARCHAR(16777216),LAST_FILE_NAME VARCHAR(200),LAST_START_DATE TIMESTAMP,LAST_END_DATE TIMESTAMP,NEXT_RUN_DATE TIMESTAMP,START_DATE TIMESTAMP,END_DATE TIMESTAMP,MIGRATED_TO_QUARTZ VARCHAR(1),CACHED_TABLE_NAME VARCHAR(30),JOB_NAME VARCHAR(100),JOB_MINUTE VARCHAR(100),JOB_HOUR VARCHAR(100),JOB_DAY VARCHAR(100),JOB_MONTH VARCHAR(100),JOB_WEEKDAY VARCHAR(100),MAIL_CC VARCHAR(254),MAIL_BCC VARCHAR(254),RECIPIENTS_QUERY_ID INTEGER,RUNS_TO_ARCHIVE INTEGER,ACTIVE INTEGER,USER_ID INTEGER,CREATION_DATE TIMESTAMP,UPDATE_DATE TIMESTAMP,CREATED_BY VARCHAR(50),UPDATED_BY VARCHAR(50),JOB_TYPE VARCHAR(50),LAST_RUN_DETAILS VARCHAR(4000),LAST_RUN_MESSAGE VARCHAR(100),ENABLE_AUDIT INTEGER,ALLOW_SHARING INTEGER,ALLOW_SPLITTING INTEGER,CACHED_DATASOURCE_ID INTEGER,BATCH_FILE VARCHAR(50),FTP_SERVER_ID INTEGER,FIXED_FILE_NAME VARCHAR(1000),EMAIL_TEMPLATE VARCHAR(100),EXTRA_SCHEDULES VARCHAR(16777216),HOLIDAYS VARCHAR(16777216),QUARTZ_CALENDAR_NAMES VARCHAR(100),JOB_SECOND VARCHAR(100),SCHEDULE_ID INTEGER,JOB_YEAR VARCHAR(100),SUB_DIRECTORY VARCHAR(100),SMTP_SERVER_ID INTEGER,JOB_OPTIONS VARCHAR(16777216),ERROR_EMAIL_TO VARCHAR(500),TIME_ZONE VARCHAR(50),PRE_RUN_REPORT VARCHAR(50),POST_RUN_REPORT VARCHAR(50),MANUAL INTEGER)
 CREATE INDEX JOBS_INDX ON PUBLIC.ART_JOBS(USERNAME)
 CREATE MEMORY TABLE PUBLIC.ART_JOBS_PARAMETERS(JOB_ID INTEGER NOT NULL,PARAM_TYPE CHARACTER(1),PARAM_NAME VARCHAR(60),PARAM_VALUE VARCHAR(4000))
